src/objects/Stripe_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Delayed_Webhook_Processor_ID__c</fullName>
        <inlineHelpText>ID of the scheduled job</inlineHelpText>
        <label>Delayed Webhook Processor ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Live_Environment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to use the LIVE key in all API operations.</inlineHelpText>
        <label>Is Live Environment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stripe_Publishable_Live_Key__c</fullName>
        <label>Stripe Publishable Live Key</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stripe_Publishable_Test_Key__c</fullName>
        <label>Stripe Publishable Test Key</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stripe_Secret_Live_Key__c</fullName>
        <inlineHelpText>LIVE Stripe API Key</inlineHelpText>
        <label>Stripe Secret Live Key</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stripe_Secret_Test_Key__c</fullName>
        <inlineHelpText>TEST Stripe API key</inlineHelpText>
        <label>Stripe Secret Test Key</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Stripe Settings</label>
</CustomObject>